Add friendly title to notifications

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <% _.each(collection, function (model) { %>
         <div class="item">
           <p>
-            <strong><a href="<%= eventURL(model) %>" target="_blank"><%= model.type %></a></strong>
+            <strong><a href="<%= eventURL(model) %>" target="_blank"><%= eventTitle(model) %></a></strong>
             on <a href="https://github.com/<%= model.repo.name %>" target="_blank"><%= model.repo.name %></a>
             by <a href="https://github.com/<%= model.actor.login %>" target="_blank"><img src="<%= model.actor.avatar_url %>" class="avatar" /> <%= model.actor.login %></a>
             <span data-livestamp="<%= model.created_at %>">at <%= new Date(model.created_at).toLocaleTimeString() %></span>
