Use shields.io badges

--- a/index.html
+++ b/index.html
@@ -78,14 +78,18 @@
     <footer class="footer">
       <div class="container">
             <p class="text-muted">
-              GitHub Web Notifier
-              <i class="fa fa-code"></i> with <i class="fa fa-heart-o"></i>
-              by <a href="https://github.com/typicode">typicode</a>
+              <span>
+                GitHub Web Notifier
+                <i class="fa fa-code"></i> with <i class="fa fa-heart-o"></i>
+                by <a href="https://github.com/typicode">typicode</a>
+              </span>
               <span style="display: inline-block; width: 20px"></span>
-              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://typicode.github.io/ghwn" data-text="Get desktop notifications for #github (nothing to install)" data-via="typicode" data-dnt="true">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-              <iframe src="https://ghbtns.com/github-btn.html?user=typicode&repo=ghwn&type=star&count=false" frameborder="0" scrolling="0" width="50px" height="20px"></iframe>
+              <a href="https://twitter.com/intent/tweet?text=Get%20desktop%20notifications%20for%20%23github%20(nothing%20to%20install)&url=http%3A%2F%2Ftypicode.github.io%2Fghwn&via=typicode">
+                <img src="https://img.shields.io/twitter/url/http/typicode.svg?style=social" alt="Tweet">
+              </a>
+              <object type="image/svg+xml" data="https://img.shields.io/github/stars/typicode/ghwn.svg?style=social&label=Star&link=https://github.com/typicode/ghwn/&link=https://github.com/typicode/ghwn/stargazers">
+                <a href="https://github.com/typicode/ghwn/">Star GHWN on GitHub</a>
+              </object>
             </p>
       </div>
     </footer>
