Add myself as author

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <span>
                 GitHub Web Notifier
                 <i class="fa fa-code"></i> with <i class="fa fa-heart-o"></i>
-                by <a href="https://github.com/typicode">typicode</a>
+                by <a href="https://github.com/typicode">typicode</a> + <a href="https://github.com/j-f1">J F</a>
               </span>
               <span style="display: inline-block; width: 20px"></span>
               <a href="https://twitter.com/intent/tweet?text=Get%20desktop%20notifications%20for%20%23github%20(nothing%20to%20install)&url=http%3A%2F%2Ftypicode.github.io%2Fghwn&via=typicode">
